@@ -1,13 +1,12 @@
 package com.codebusters.codebusters.services;
 
+import com.codebusters.codebusters.models.dtos.ChildUserDTO;
 import com.codebusters.codebusters.models.dtos.WalletDTO;
 import com.codebusters.codebusters.models.entities.Wallet;
 import com.codebusters.codebusters.repositories.WalletRepository;
 import jakarta.validation.Valid;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -24,37 +23,33 @@ public class WalletService {
 	private ModelMapper modelMapper;
 
 	public List<WalletDTO> listAll() {
-		List<Wallet> wallets = walletRepository.findAll();
-		return wallets.stream()
-				.map(wallet -> modelMapper.map(wallet, WalletDTO.class))
-				.collect(Collectors.toList());
+		return walletRepository.findAll().stream()
+				.map(wallet -> modelMapper.map(wallet, WalletDTO.class)).toList();
 	}
 
-	public ResponseEntity<WalletDTO> findById(Long id) {
-		Optional<Wallet> walletOptional = walletRepository.findById(id);
-		if (walletOptional.isPresent()) {
-			WalletDTO walletDTO = modelMapper.map(walletOptional.get(), WalletDTO.class);
-			return new ResponseEntity<>(walletDTO, HttpStatus.OK);
-		} else {
-			return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+	public WalletDTO findById(Long id) {
+		Optional<Wallet> optional = walletRepository.findById(id);
+		WalletDTO walletDTO = null;
+
+		if (optional.isPresent()) {
+			walletDTO = modelMapper.map(optional.get(), WalletDTO.class);
 		}
+		return walletDTO;
 	}
 
-	public ResponseEntity<WalletDTO> create(@Valid WalletDTO walletDTO) {
+	public WalletDTO create(@Valid WalletDTO walletDTO) {
 		Wallet wallet = modelMapper.map(walletDTO, Wallet.class);
 		Wallet createdWallet = walletRepository.save(wallet);
-		WalletDTO createdWalletDTO = modelMapper.map(createdWallet, WalletDTO.class);
-		return new ResponseEntity<>(createdWalletDTO, HttpStatus.CREATED);
+		return modelMapper.map(createdWallet, WalletDTO.class);
 	}
 
-	public ResponseEntity<WalletDTO> update(@Valid WalletDTO walletDTO) {
+	public WalletDTO update(@Valid WalletDTO walletDTO) {
 		Wallet wallet = modelMapper.map(walletDTO, Wallet.class);
 		if (walletRepository.existsById(wallet.getId())) {
 			Wallet updatedWallet = walletRepository.save(wallet);
-			WalletDTO updatedWalletDTO = modelMapper.map(updatedWallet, WalletDTO.class);
-			return new ResponseEntity<>(updatedWalletDTO, HttpStatus.OK);
+			return modelMapper.map(updatedWallet, WalletDTO.class);
 		} else {
-			return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+			return null; // Ou lançar uma exceção adequada, por exemplo, WalletNotFoundException
 		}
 	}
 
